crates/ink/tests/ui/trait_def/fail/config_namespace_invalid_4.stderr
error: expected a string literal for `namespace` ink! trait definition configuration argument
 --> tests/ui/trait_def/fail/config_namespace_invalid_4.rs:3:25
  |
3 | #[ink::trait_definition(namespace = true)]
  |                         ^^^^^^^^^^^^^^^^
